This file summarizes what's changed between releases of Mail-DKIM.

{{$NEXT}}

0.58

  2019-11-13: Marc Bradshaw <marc@marcbradshaw.net>

   Thanks to Martin Sluka <fany@cpan.org>
   * Prevent outer $SIG{__DIE__} handlers from being called

   Thanks to Todd Richmond
   * Lowercase q tag before use
   * Lowercase domain check
   * Strip quotes from PublicKey.pm in addition to other whitespace chars
   * Fix regex performance issue

0.57

  2019-10-08: Marc Bradshaw <marc@marcbradshaw.net>

   * Correct the $self->{result_reason} variable name for $self->{details} that is
     used by the parent class in Mail::DKIM::ARC::Signer

0.56

  2019-08-21: Marc Bradshaw <marc@marcbradshaw.net>

   * Properly verify the domain, not the instance, of an ARC signature.
     This allows ARC signatures by keys marked as no subdomains to
     validate correctly.

0.55

  2019-04-12: Marc Bradshaw <marc@marcbradshaw.net>

   * The authserv-id of an Authentication-Results header can contain
     CFWS, Use Mail::AuthenticationResults to parse the authserv-id
     from this field.
   * Improve parsing of authserv-id in ARC signer

0.54

  2018-10-12: Marc Bradshaw <marc@marcbradshaw.net>

   * The T tag on arcseal is not required

0.53

  2018-05-27: Marc Bradshaw <marc@marcbradshaw.net>

   * Make tests less dependent on local resolver setup
   * Add thanks to Valimail

0.52

  2018-01-12: Marc Bradshaw <marc@marcbradshaw.net>

   * Internet connection tests were declared in the wrong order

0.51

  2018-01-12: Marc Bradshaw <marc@marcbradshaw.net>

   * Fix for older versions of perl
   * Tests no longer fail with no internet connection

0.50

  2017-12-16: Marc Bradshaw <marc@marcbradshaw.net>

   * Added Strict mode to DKIM verifier
   * Code formatting fixes

  2017-12-14: John Levine <john.levine@standcore.com>

  * Make ARC code work a lot better
  * Add new arcsign.pl and arcverify.pl scripts
  * ARC code passing all tests and production ready.